fix: improve Claude CLI session restore with format fixes and error visibility
- Remove 20K token budget from ClaudeCliExporter (Claude CLI manages its
  own context window; pre-trimming was harmful with large tool exchanges)
- Add required Anthropic API fields to assistant messages in exported JSONL
  (id, type, model, stop_reason, stop_sequence) — Claude CLI expects full
  API response objects, not bare role+content
- Change JSONL version field from "1" to CLI version string
- Show UI warning when session resume fails and falls back to fresh session
  (previously silently retried without --resume)
- Add detailed error logging throughout Claude CLI resume flow
- Fix AnthropicClientImporter to find tool_result blocks in mixed user
  messages (tool_result + text merged by mergeConsecutiveSameRole)
- Fix 2 pre-existing test failures in AnthropicClientRoundTripTest

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>